# MaaServer

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run.bat
src/: bark.py  maa.py  scheduler.py  server.py  settings.py
templates/: index.html
