[project]
name = "maaserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asst",
    "fastapi[standard]>=0.120.0",
    "jinja2>=3.1.6",
    "psutil>=7.1.2",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "3rdparty/asst",
]

[tool.uv.sources]
asst = { workspace = true }

[dependency-groups]
dev = []
